--- a/custom_components/periodic_min_max/manifest.json
+++ b/custom_components/periodic_min_max/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "periodic_min_max",
-  "name": "Periodic Min Max",
+  "name": "Periodic Min/Max",
   "codeowners": [
     "@andrew-codechimp"
   ],
