--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ classifiers = [
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: 3",
 ]
-description = "HA-Periodic-Min-Max - Periodic Min Max Helpers for Home Assistant"
+description = "HA-Periodic-Min-Max - Periodic Min/Max Helpers for Home Assistant"
 documentation = "https://github.com/andrew-codechimp/HA-Periodic-Min-Max"
 homepage = "https://github.com/andrew-codechimp/HA-Periodic-Min-Max"
 license = "MIT"
