--- a/renovate.json5
+++ b/renovate.json5
@@ -3,4 +3,11 @@
   "extends": [
     "config:recommended"
   ],
+  "lockFileMaintenance": {
+    "enabled": true,
+  },
+  "ignoreDeps": [
+    "homeassistant",
+    "python",
+  ],
 }
