Fix unit mismatch on init and tidy up

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,62 @@
             "type": "shell",
             "command": "scripts/develop",
             "problemMatcher": []
+        },
+        {
+            "label": "Lint (Ruff)",
+            "type": "shell",
+            "command": "uv run ruff check . --fix",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            }
+        },
+        {
+            "label": "Type Check (mypy)",
+            "type": "shell",
+            "command": "uv run mypy",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            }
+        },
+        {
+            "label": "Run Tests (pytest)",
+            "type": "shell",
+            "command": "uv run pytest",
+            "problemMatcher": [],
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            }
+        },
+        {
+            "label": "Lint All (Ruff + mypy + Tests)",
+            "type": "shell",
+            "command": "scripts/lint",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            }
         }
     ],
     "configurations": [
